add gRPC api handler for listTransfer
